# ALzed

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: README.md
crates/bridge/: Cargo.toml
crates/bridge/snippets/: al_snippets.json
crates/bridge/src/: main.rs  progress.rs  snippets.rs
crates/extension/: Cargo.toml  extension.toml
crates/extension/src/: al.rs
docs/: al-protocol.md  tasks-snippet.json  zed-registry-pr-body.md  zed-registry-submission.md
languages/al/: config.toml
