[package]
name = "alzed-bridge"
version = "0.1.0"
edition = "2021"
description = "Protocol bridge between vanilla LSP (Zed) and Microsoft AL Language Server's al/* custom protocol"
license = "MIT"
repository = "https://github.com/mhensberg2003/ALzed"

[[bin]]
name = "alzed-bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "process", "sync", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
